# DileepkumarYamasani

./: .gitignore  LIGHTING_SCENE_BUILDER_DESIGN.md  Platonic  Solid Creater.py  README.md  pyproject.toml
lighting_scene_builder_houdini/: __init__.py
lighting_scene_builder_houdini/config/: filter_config.py  scene_builder_filters.yaml
lighting_scene_builder_houdini/core/: compound_builder.py  context.py  models.py  package_assembler.py  pipeline.py  validation.py  variant_resolver.py
lighting_scene_builder_houdini/core/db/: data_loader.py
lighting_scene_builder_houdini/data/: generate_dummy_data.py
lighting_scene_builder_houdini/integration/houdini/: houdini_actions.py
lighting_scene_builder_houdini/launch/: main.py
tests/: test_pipeline.py
